# InsureCRM

backend/: main.py  pyproject.toml  requirements.txt
backend/core/: config.py  security.py
backend/db/: models.py  sessions.py
backend/routes/: analytics.py  clients.py  policies.py  reminders.py  upload.py
backend/schemas/: clients.py  policy.py
backend/scripts/: db_hotfix.py
backend/services/: analytics_service.py  reminder_service.py
frontend/: .env.example  .env.production  package-lock.json  package.json
frontend/docs/: metrics-glossary.md
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx  Header.jsx  InfoTooltip.jsx  Login.jsx  Sidebar.jsx
frontend/src/constants/: metricsInfo.js
frontend/src/pages/: Analytics.jsx  Clients.jsx  Dashboard.jsx  Import.jsx  Policies.jsx  Reminders.jsx
frontend/src/services/: api.js  supabase.js
